Fixes to problems detected by FindBugs plugin. Also fixed bugs #741, 742, 743, 744 and 745.
git-svn-id: https://wush.net/svn/mindalliance@4742 baad322d-9929-0410-88f0-f92e8ff3e1bd